fixed whitespace issue going to bed

--- a/home-styles.css
+++ b/home-styles.css
@@ -226,6 +226,10 @@ background: rgba(30,169,218,0.30);
 
 }
 
+.slick-arrow {
+    display: none;
+}
+
 
 .social-header {
     display: inline-block;
